[package]
name = "kitsune_p2p_direct"
version = "0.0.1"
description = "kitsune-p2p application demo"
license = "Apache-2.0"
homepage = "https://github.com/holochain/holochain"
documentation = "https://github.com/holochain/holochain"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo", "p2p", "dht", "networking" ]
categories = [ "network-programming" ]
edition = "2018"

[dependencies]
arrayref = "0.3.6"
byteorder = "1.3.4"
kitsune_p2p = { version = "0.0.1", path = "../kitsune_p2p" }
tokio = { version = "0.2", features = [ "full" ] }

[dev-dependencies]
tracing-subscriber = "0.2"
